Fixed Read More button not fitting in a card with a lot of paragraph text

--- a/express/public/stylesheets/style.css
+++ b/express/public/stylesheets/style.css
@@ -94,7 +94,7 @@ li a:hover {
 	margin-left: 1%;
 	margin-right: 1%;
 	width: 48%;
-	height: 350px;
+	height: 380px;
 	border-radius: 6px;
 	background-color: white;
 	float: left;
